get in touch section margin padding problem solved and images added

--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
         </div>
 
         <!-- bottom full image  -->
-
-        <div class="hero rounded-2xl relative overflow-hidden mt-6 bg-cover h-full md:h-[450px]" style="background-image: url(images/4.png)">
+          hi how are you
+        <div class="hero rounded-2xl relative overflow-hidden mt-6 bg-cover h-[250px]  md:h-[450px]" style="background-image: url(images/4.png)">
           <div class="hero-overlay bg-opacity-60"></div>
-          <div class="hero-content absolute left-10 bottom-10  text-neutral-content">
+          <div class="hero-content absolute left-1 bottom-1 md:left-10 md:bottom-10  text-neutral-content">
             <div class="max-w-md">
               <h1 class="mb-5 text-3xl font-bold">Professional Program</h1>
               <p class="mb-5">
@@ -653,41 +653,43 @@
 
         <!-- left and right divs  -->
 
-        <div class="flex flex-col md:flex-row gap-6">
+        <div class="flex flex-col md:flex-row gap-6 items-center">
           <!-- left div starts -->
           <div
             class="flex flex-col p-12 border rounded-lg border-gray-400 gap-6"
           >
-            <div class="bg-gray-400 p-8 rounded-lg">
+            <div class="bg-[#bced6d1a] p-6 rounded-lg">
               <div class="mb-6">
                 <img src="./images/Group 1171275317.png" alt="" />
               </div>
-              <p class="font-light text-sm">Phone Number :</p>
-              <h3 class="font-extrabold text-lg">(+62) 123-321-543</h3>
+             
+                <p class="font-light text-sm">Phone Number :</p>
+                <h3 class="font-extrabold text-lg">(+62) 123-321-543</h3>
+           
             </div>
-            <div class="bg-gray-400 p-8 rounded-lg">
+            <div class="bg-[#fddd5f1a] p-6 rounded-lg">
               <div class="mb-6">
-                <img src="./images/Group 1171275317.png" alt="" />
+                <img src="./images/Group 1171275318.png" alt="" />
               </div>
-              <p class="font-light text-sm">Phone Number :</p>
-              <h3 class="font-extrabold text-lg">(+62) 123-321-543</h3>
+              <p class="font-light text-sm">Email :</p>
+              <h3 class="font-extrabold text-lg">hockeys@support.com</h3>
             </div>
-            <div class="bg-gray-400 p-8 rounded-lg">
+            <div class="bg-[#629cf31a] p-6 rounded-lg">
               <div class="mb-6">
-                <img src="./images/Group 1171275317.png" alt="" />
+                <img src="./images/Group 1171275321.png" alt="" />
               </div>
-              <p class="font-light text-sm">Phone Number :</p>
-              <h3 class="font-extrabold text-lg">(+62) 123-321-543</h3>
+              <p class="font-light text-sm">Location :</p>
+              <h3 class="font-extrabold text-lg">152/1 Mohakhali Wireless Gate</h3>
             </div>
           </div>
 
           <!-- left div ends  -->
 
           <!-- right div starts  -->
-          <div class="">
+          <div class="w-full h-full">
             <!-- grid inputs  -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
-              <div class="w-full md:w-[324px] h-16">
+              <div class="w-full h-16">
                 <h3 class="font-extrabold text-xl">Your Name</h3>
                 <input
                   type="text"
@@ -695,28 +697,28 @@
                   placeholder="Enter Your Full Name"
                 />
               </div>
-              <div class="w-full md:w-[324px] h-16">
-                <h3 class="font-extrabold text-xl">Your Name</h3>
+              <div class="w-full  h-16">
+                <h3 class="font-extrabold text-xl">Your Email</h3>
                 <input
                   type="text"
-                  class="w-full h-full p-5 bg-gray-100 rounded-lg"
-                  placeholder="Enter Your Full Name"
+                  class="w-full h-full p-5 bg-[#13131808] rounded-lg"
+                  placeholder="Enter Your Email"
                 />
               </div>
-              <div class="w-full md:w-[324px] h-16">
-                <h3 class="font-extrabold text-xl">Your Name</h3>
+              <div class="w-full  h-16">
+                <h3 class="font-extrabold text-xl">Subject</h3>
                 <input
                   type="text"
-                  class="w-full h-full p-5 bg-gray-100 rounded-lg"
-                  placeholder="Enter Your Full Name"
+                  class="w-full h-full p-5 bg-[#13131808] rounded-lg"
+                  placeholder="Enter Your Subject"
                 />
               </div>
-              <div class="w-full md:w-[324px] h-16">
-                <h3 class="font-extrabold text-xl">Your Name</h3>
+              <div class="w-full  h-16">
+                <h3 class="font-extrabold text-xl">Phone Number</h3>
                 <input
                   type="text"
-                  class="w-full h-full p-5 bg-gray-100 rounded-lg"
-                  placeholder="Enter Your Full Name"
+                  class="w-full h-full p-5 bg-[#13131808] rounded-lg"
+                  placeholder="Enter Your Phone Number"
                 />
               </div>
             </div>
@@ -724,12 +726,8 @@
             <!-- text area  -->
             <div class="mt-12">
               <h3 class="font-extrabold text-xl mb-4">Message</h3>
-              <div class="h-[200px] md:h-[425px] w-full">
-                <input
-                  class="h-full w-full bg-gray-100 rounded-lg"
-                  type="text"
-                  placeholder="Message"
-                />
+              <div class="h-[200px] md:h-[330px] w-full">
+                <textarea class="textarea textarea-bordered h-full w-full bg-[#13131808]" placeholder="Write Your Message"></textarea>
               </div>
               <button
                 class="btn btn-primary w-full mt-8 bg-[#FF4240] border-none"
