footer section bug fixed

--- a/index.html
+++ b/index.html
@@ -759,26 +759,28 @@
 
       <!-- social media section ends -->
     </main>
-    <footer class="bg-green-300 py-24 px-20">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-[150px] justify-between">
-        <div class="space-y-4">
+    <footer class="bg-[#131318] text-[#ffffff99] py-10 px-14 md:py-24 md:px-20">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-10 md:gap-[150px]">
+        <div class="space-y-4 text-center md:text-start">
           <h2 class="text-3xl font-extrabold">Get In Touch</h2>
           <p>
             Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
             dolor. Purus urna in sit nullam proin.
           </p>
-          <div class="flex items-center gap-4">
-            <i class="fa-regular fa-envelope text-2xl text-red-500"></i>
-            <p>hockeys@support.com</p>
-          </div>
-          <div class="flex items-center gap-4">
-            <i class="fa-solid fa-phone text-2xl text-red-500"></i>
-            <p>(+62) 123-321-543</p>
+          <div class="flex flex-col justify-center items-center md:justify-start md:items-start">
+            <div class="flex items-center gap-4">
+              <i class="fa-regular fa-envelope text-2xl text-red-500"></i>
+              <p>hockeys@support.com</p>
+            </div>
+            <div class="flex items-center gap-4">
+              <i class="fa-solid fa-phone text-2xl text-red-500"></i>
+              <p>(+62) 123-321-543</p>
+            </div>
           </div>
         </div>
         <!-- middle flex section starts -->
-        <div class="flex gap-[150px]">
-          <div>
+        <div class="flex gap-[150px] text-center md:text-start justify-evenly">
+          <div class="text-center md:text-start">
             <h2 class="text-lg font-bold">Company</h2>
             <ul class="space-y-5">
               <li><a href="">About Us</a></li>
@@ -788,7 +790,7 @@
               <li><a href="">Legal Notice</a></li>
             </ul>
           </div>
-          <div>
+          <div class="text-center md:text-start">
             <h2 class="text-lg font-bold">Support</h2>
             <ul class="space-y-5">
               <li><a href="">Help Centre</a></li>
@@ -800,7 +802,7 @@
           </div>
         </div>
         <!-- middle flex section ends  -->
-        <div class="">
+        <div class="mx-auto text-center md:text-start">
           <h2 class="text-lg font-bold">Services</h2>
           <ul class="space-y-5">
             <li><a href="">Academy</a></li>
