footer lorem ipsum removed

--- a/index.html
+++ b/index.html
@@ -758,8 +758,7 @@
         <div class="space-y-4 text-center md:text-start">
           <h2 class="text-3xl font-extrabold">Get In Touch</h2>
           <p>
-            Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
-            dolor. Purus urna in sit nullam proin.
+            If any emergency, please call us or contact us from the email and number below.
           </p>
           <div class="flex flex-col justify-center items-center md:justify-start md:items-start">
             <div class="flex items-center gap-4">
